--- a/app/src/main/res/drawable/border_bottom_roundedx.xml
+++ b/app/src/main/res/drawable/border_bottom_roundedx.xml
@@ -9,7 +9,7 @@
 
     <stroke
         android:width="2dp"
-        android:color="#C4CDE0" >
+        android:color="#da0384" >
     </stroke>
 
     <padding
