--- a/app/src/main/res/layout/activity_homeadmin.xml
+++ b/app/src/main/res/layout/activity_homeadmin.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent"
+    tools:context=".homeadmin">
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
@@ -14,20 +14,88 @@
         android:layout_marginTop="60dp"
         android:layout_marginRight="6dp"
         android:layout_marginBottom="20dp"
-        app:srcCompat="@drawable/amref" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="70dp"
-        android:text="welcome! Select your identity and proceed"/>
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="180dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="0dp"
-        android:layout_marginRight="6dp"
-        android:layout_marginBottom="20dp"
         app:srcCompat="@drawable/cliniclogo" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:id="@+id/registercaregiver"
+            android:layout_width="115dp"
+            android:layout_height="125dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/customlinearlayout"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                app:srcCompat="@drawable/ic_today" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat_bold"
+                android:gravity="center"
+                android:text="REGISTER CAREGIVER"
+                android:textColor="@android:color/white"
+                android:textSize="16sp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="120dp"
+            android:layout_height="125dp"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/customlinearlayout"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                app:srcCompat="@drawable/emergency" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat_bold"
+                android:gravity="center"
+                android:text="EMERGENCY"
+                android:textColor="@android:color/white"
+                android:textSize="16sp" />
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="115dp"
+            android:layout_height="125dp"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/customlinearlayout"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                app:srcCompat="@drawable/medicalfolder" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat_bold"
+                android:gravity="center"
+                android:text="MEDICAL FOLDER"
+                android:textColor="@android:color/white"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -36,7 +104,6 @@
         android:orientation="horizontal">
 
         <LinearLayout
-            android:id="@+id/doctors"
             android:layout_width="115dp"
             android:layout_height="125dp"
             android:layout_marginRight="10dp"
@@ -54,13 +121,12 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat_bold"
                 android:gravity="center"
-                android:text="CAREGIVER"
+                android:text="PROFILE"
                 android:textColor="@android:color/white"
                 android:textSize="16sp" />
 
         </LinearLayout>
         <LinearLayout
-            android:id="@+id/patient"
             android:layout_width="120dp"
             android:layout_height="125dp"
             android:layout_marginLeft="10dp"
@@ -71,14 +137,14 @@
             <ImageView
                 android:layout_width="64dp"
                 android:layout_height="64dp"
-                android:src="@drawable/profile" />
+                android:src="@drawable/feedback" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat_bold"
                 android:gravity="center"
-                android:text="PATIENTS"
+                android:text="FEEDBACK"
                 android:textColor="@android:color/white"
                 android:textSize="16sp" />
 
@@ -86,7 +152,7 @@
 
 
         <LinearLayout
-            android:id="@+id/admin"
+            android:id="@+id/logout"
             android:layout_width="115dp"
             android:layout_height="125dp"
             android:layout_marginLeft="10dp"
@@ -97,14 +163,14 @@
             <ImageView
                 android:layout_width="64dp"
                 android:layout_height="64dp"
-                app:srcCompat="@drawable/profile" />
+                app:srcCompat="@drawable/logout" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat_bold"
                 android:gravity="center"
-                android:text="ADMIN"
+                android:text="LOG OUT"
                 android:textColor="@android:color/white"
                 android:textSize="16sp" />
         </LinearLayout>
